0.1.9 - * Added 'logging_status' operational method.

0.1.8 - * 

0.1.7 - * Fixed issue with one-liners not croaking errors
        * fw() sub in one-liners now autmatically calls auth()
        * Documentation updates

0.1.6 - * Added a Test module with the ability to test interfaces, routes, ARP as 
        well as testing the security and NAT rulebase
        * Added HA and NTP operation commands
        * Added better one-liner handing with the fw() sub
        * Documentation updates
        * Various fixes


0.1.5 - (2019-04-10) Documentation Updates

0.1.4 - (2019-04-10) 
    * Added Global Counters modules
    * Added UserID modules

0.1.3 - (2019-03-29) Added tunnel (IPSEC) module

0.1.2 - Documentation Updates

0.1.1 - Initial Release